# scraping2

./: pyproject.toml
BS4/: ysp_funcs.py  ysp_main.py
BS4/data/results/: Chinese Food-San Francisco, CA-page-0.json  Chinese Food-San Francisco, CA-page-1.json  Chinese Food-San Francisco, CA-page-2.json  Chinese Food-San Francisco, CA-page-3.json  Chinese Food-San Francisco, CA-page-4.json  Chinese Food-San Francisco, CA-page-5.json  contractors-NY-page-0.json  contractors-NY-page-1.json  contractors-NY-page-2.json
